# DataQuiver

./: .commitlintrc.json  .conform.yaml  .gitattributes  .gitignore  .gitmessage  .golangci.yaml  pyproject.toml
.github/workflows/: ci.yml  commit.yml  merge-policy.yml  qodana_code_quality.yml
protos/ir/: resource_identity.proto
